added SobelTest